cleaned up the code and renamed dataset files before feature selection

--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,17 +15,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 137,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# The function below draws a correlation matrix."
+    "The function below draws a correlation matrix."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -457,13 +456,13 @@
        "[2122 rows x 73 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./dataset/matches_initial.csv\", parse_dates=['date'])\n",
+    "df = pd.read_csv(\"./dataset/01_initial.csv\", parse_dates=['date'])\n",
     "\n",
     "df"
    ]
@@ -486,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +501,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +805,7 @@
        " 'fd_opponent_win_pinnaclesports_closing_probs']"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +899,7 @@
        " 'fd_opponent_post_rating']"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +964,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1031,7 @@
        "Name: fulltime_result, dtype: int64"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1299,7 @@
        "[0 rows x 91 columns]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1379,7 @@
        "[0 rows x 79 columns]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1463,7 @@
        "[0 rows x 40 columns]"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1548,7 @@
        "[0 rows x 39 columns]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1573,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -2757,7 +2756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2788,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -4116,7 +4115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -4141,7 +4140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -4293,16 +4292,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Storing the cleaned dataset"
+    "# Feature selection"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section the correlation of the features with the target variable are analyzed and uncorrelated features are dropped."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First the dataset is saved into file and imported into IBM SPSS to perform correlation analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./dataset/matches_cleaned.csv\", index=False)"
+    "df.to_csv(\"./dataset/02_pre_feature_selection.csv\", index=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selection of features for regular model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Perform correlation analysis for normal team/opponent features and the target variable"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selection of features for panel data model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Perform correlation analysis for First Differance features and the target variable"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Storing the cleaned dataset"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final dataset is saved into file in order to later be used to train/test the machine learning models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"./dataset/03_matches_cleaned.csv\", index=False)"
    ]
   }
  ],
