feature selection done!

--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "[2122 rows x 73 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        " 'fd_opponent_win_pinnaclesports_closing_probs']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        " 'fd_opponent_post_rating']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
        "Name: fulltime_result, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
        "[0 rows x 91 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1379,7 @@
        "[0 rows x 79 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1463,7 @@
        "[0 rows x 40 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1548,7 @@
        "[0 rows x 39 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -2756,7 +2756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2787,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2804,7 +2804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2863,7 +2863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2914,7 +2914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -4001,7 +4001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -4174,7 +4174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4190,12 +4190,81 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bivariate-Correlation analysis of team related columns shows that the following columns do not have correlation with the target variable:\n",
+    "<ul>\n",
+    "<li>draw_bet365_probs</li>\n",
+    "<li>team_halftime_goals</li>\n",
+    "<li>team_shots_off_target</li>\n",
+    "<li>team_blocked</li>\n",
+    "<li>team_tackles_percent</li>\n",
+    "<li>team_aerial_duels</li>\n",
+    "<li>team_saves</li>\n",
+    "<li>team_fouls_won</li>\n",
+    "<li>team_yellow_cards</li>\n",
+    "<li>team_red_cards</li>\n",
+    "</ul>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Perform correlation analysis for normal team/opponent features and the target variable"
+    "uncorr_team_cols = [\n",
+    "    'draw_bet365_probs',\n",
+    "    'team_halftime_goals',\n",
+    "    'team_shots_off_target',\n",
+    "    'team_blocked',\n",
+    "    'team_tackles_percent',\n",
+    "    'team_aerial_duels',\n",
+    "    'team_saves',\n",
+    "    'team_fouls_won',\n",
+    "    'team_yellow_cards',\n",
+    "    'team_red_cards',\n",
+    "]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It also shows the following opponent columns as uncorrelated:\n",
+    "<ul>\n",
+    "<li>opponent_halftime_goals</li>\n",
+    "<li>opponent_shots_off_target</li>\n",
+    "<li>opponent_blocked</li>\n",
+    "<li>opponent_tackles_percent</li>\n",
+    "<li>opponent_aerial_duels</li>\n",
+    "<li>opponent_saves</li>\n",
+    "<li>opponent_fouls_won</li>\n",
+    "<li>opponent_yellow_cards</li>\n",
+    "<li>opponent_red_cards</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uncorr_opponent_cols = [\n",
+    "    'opponent_halftime_goals',\n",
+    "    'opponent_shots_off_target',\n",
+    "    'opponent_blocked',\n",
+    "    'opponent_tackles_percent',\n",
+    "    'opponent_aerial_duels',\n",
+    "    'opponent_saves',\n",
+    "    'opponent_fouls_won',\n",
+    "    'opponent_yellow_cards',\n",
+    "    'opponent_red_cards',\n",
+    "]"
    ]
   },
   {
@@ -4207,12 +4276,120 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bivariate-Correlation analysis of first differance team related columns shows that the following columns do not have correlation with the target variable:\n",
+    "<ul>\n",
+    "<li>fd_team_halftime_goals</li>\n",
+    "<li>fd_team_pre_rating</li>\n",
+    "<li>fd_team_possession</li>\n",
+    "<li>fd_team_blocked</li>\n",
+    "<li>fd_team_passing_percent</li>\n",
+    "<li>fd_team_corners</li>\n",
+    "<li>fd_team_offsides</li>\n",
+    "<li>fd_team_tackles_percent</li>\n",
+    "<li>fd_team_aerial_duels</li>\n",
+    "<li>fd_team_saves</li>\n",
+    "<li>fd_team_fouls_committed</li>\n",
+    "<li>fd_team_fouls_won</li>\n",
+    "<li>fd_team_yellow_cards</li>\n",
+    "<li>fd_team_red_cards</li>\n",
+    "<li>fd_draw_bet365_probs</li>\n",
+    "</ul>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Perform correlation analysis for First Differance features and the target variable"
+    "uncorr_team_fd_cols = [\n",
+    "    'fd_team_halftime_goals',\n",
+    "    'fd_team_pre_rating',\n",
+    "    'fd_team_possession',\n",
+    "    'fd_team_blocked',\n",
+    "    'fd_team_passing_percent',\n",
+    "    'fd_team_corners',\n",
+    "    'fd_team_offsides',\n",
+    "    'fd_team_tackles_percent',\n",
+    "    'fd_team_aerial_duels',\n",
+    "    'fd_team_saves',\n",
+    "    'fd_team_fouls_committed',\n",
+    "    'fd_team_fouls_won',\n",
+    "    'fd_team_yellow_cards',\n",
+    "    'fd_team_red_cards',\n",
+    "    'fd_draw_bet365_probs',\n",
+    "]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It also shows the following opponent's first differance columns as uncorrelated:\n",
+    "<ul>\n",
+    "<li>fd_opponent_halftime_goals</li>\n",
+    "<li>fd_opponent_pre_rating</li>\n",
+    "<li>fd_opponent_possession</li>\n",
+    "<li>fd_opponent_blocked</li>\n",
+    "<li>fd_opponent_passing_percent</li>\n",
+    "<li>fd_opponent_corners</li>\n",
+    "<li>fd_opponent_offsides</li>\n",
+    "<li>fd_opponent_tackles_percent</li>\n",
+    "<li>fd_opponent_aerial_duels</li>\n",
+    "<li>fd_opponent_saves</li>\n",
+    "<li>fd_opponent_fouls_committed</li>\n",
+    "<li>fd_opponent_fouls_won</li>\n",
+    "<li>fd_opponent_yellow_cards</li>\n",
+    "<li>fd_opponent_red_cards</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uncorr_opponent_fd_cols = [\n",
+    "    'fd_opponent_halftime_goals',\n",
+    "    'fd_opponent_pre_rating',\n",
+    "    'fd_opponent_possession',\n",
+    "    'fd_opponent_blocked',\n",
+    "    'fd_opponent_passing_percent',\n",
+    "    'fd_opponent_corners',\n",
+    "    'fd_opponent_offsides',\n",
+    "    'fd_opponent_tackles_percent',\n",
+    "    'fd_opponent_aerial_duels',\n",
+    "    'fd_opponent_saves',\n",
+    "    'fd_opponent_fouls_committed',\n",
+    "    'fd_opponent_fouls_won',\n",
+    "    'fd_opponent_yellow_cards',\n",
+    "    'fd_opponent_red_cards',\n",
+    "    ]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dropping the uncorrelated features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_uncorr_cols = uncorr_team_cols + uncorr_opponent_cols + uncorr_team_fd_cols + uncorr_opponent_fd_cols\n",
+    "\n",
+    "df = df.drop(all_uncorr_cols, axis='columns')"
    ]
   },
   {
@@ -4233,11 +4410,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./dataset/04_matches_cleaned.csv\", index=False)"
+    "df.to_csv(\"./dataset/04_cleaned.csv\", index=False)"
    ]
   }
  ],
