--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "[2122 rows x 73 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        " 'fd_opponent_win_pinnaclesports_closing_probs']"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        " 'fd_opponent_post_rating']"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
        "Name: fulltime_result, dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
        "[0 rows x 91 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1379,7 @@
        "[0 rows x 79 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1463,7 @@
        "[0 rows x 40 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1548,7 @@
        "[0 rows x 39 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -2756,7 +2756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2787,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2804,7 +2804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2863,7 +2863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2914,7 +2914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -4001,7 +4001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -4174,7 +4174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4211,7 +4211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4250,7 +4250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4302,7 +4302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4351,7 +4351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4383,13 +4383,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_uncorr_cols = uncorr_team_cols + uncorr_opponent_cols + uncorr_team_fd_cols + uncorr_opponent_fd_cols\n",
     "\n",
     "df = df.drop(all_uncorr_cols, axis='columns')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Splitting the test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identifying the test dataset\n",
+    "test_filter = df['season'] == '2022_2023'\n",
+    "df_test = df[test_filter]\n",
+    "\n",
+    "# Saving the test dataset into file\n",
+    "df_test.to_csv(\"./dataset/04_test.csv\", index=False)\n",
+    "\n",
+    "# Removing the test data from train/validation data\n",
+    "df = df[~test_filter]\n",
+    "\n",
+    "# Removing the 'season', 'date', and 'team' variables since they are no longer needed\n",
+    "df = df.drop(['season', 'date', 'team'], axis='columns')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data balancing"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Currently the class variable is unbalanced and the 'Draw' result is about 9% less frequent than the other classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    0.364322\n",
+       "0    0.364322\n",
+       "1    0.271357\n",
+       "Name: fulltime_result, dtype: float64"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['fulltime_result'].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to balance the classes the SMOTE over-sampling algorithm is used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "# Specifying the independent features and the class variable\n",
+    "X = df.drop(['fulltime_result'], axis='columns')\n",
+    "y = df['fulltime_result']\n",
+    "\n",
+    "# Balancing the classes\n",
+    "X, y = SMOTE(random_state=42).fit_resample(X, y)\n",
+    "\n",
+    "# Merging the balanced dataset back together\n",
+    "df = pd.concat([X, y], axis='columns')"
    ]
   },
   {
@@ -4410,11 +4504,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./dataset/04_cleaned.csv\", index=False)"
+    "df.to_csv(\"./dataset/05_cleaned.csv\", index=False)"
    ]
   }
  ],
