initialized ML notebooks

--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -4487,6 +4487,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    0.333333\n",
+       "1    0.333333\n",
+       "0    0.333333\n",
+       "Name: fulltime_result, dtype: float64"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['fulltime_result'].value_counts(normalize=True)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
