tested and rejected PCA

--- a/02_01_ml_ordinary.ipynb
+++ b/02_01_ml_ordinary.ipynb
@@ -21,10 +21,10 @@
    "outputs": [],
    "source": [
     "hyper_param_tuning = {\n",
-    "    'KNN': False,\n",
-    "    'LR': False,\n",
-    "    'RF': False,\n",
-    "    'XGBoost': False,\n",
+    "    'KNN': True,\n",
+    "    'LR': True,\n",
+    "    'RF': True,\n",
+    "    'XGBoost': True,\n",
     "    'SVM': True,\n",
     "    'MLP': True,\n",
     "}"
