--- a/02_02_ml_panel.ipynb
+++ b/02_02_ml_panel.ipynb
@@ -54,12 +54,6 @@
    "source": [
     "df = pd.read_csv(\"./dataset/05_cleaned.csv\")\n",
     "\n",
-    "# Removing the columns other than those regarding the first differance\n",
-    "# cols_to_remove = [col for col in df.columns \n",
-    "#                   if ((col[:5] == 'team_') or\n",
-    "#                       (col[:9] == 'opponent_'))]\n",
-    "# df = df.drop(cols_to_remove, axis='columns')\n",
-    "\n",
     "# Setting the independent variables and the target class\n",
     "X = df.drop(['fulltime_result'], axis='columns')\n",
     "y = df['fulltime_result']"
@@ -123,13 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import Normalizer\n",
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
     "def get_pipeline(model):\n",
@@ -336,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +337,7 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 45 candidates, totalling 135 fits\n",
-      "Maximum accuracy of 0.477011 was yielded using: {'estimator__metric': 'manhattan', 'estimator__n_neighbors': 27, 'estimator__weights': 'uniform'}\n"
+      "Maximum accuracy of 0.477011 was yielded using: {'estimator__metric': 'euclidean', 'estimator__n_neighbors': 27, 'estimator__weights': 'uniform'}\n"
      ]
     }
    ],
@@ -445,14 +438,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 140 candidates, totalling 420 fits\n"
+      "Fitting 3 folds for each of 140 candidates, totalling 420 fits\n",
+      "Maximum accuracy of 0.502155 was yielded using: {'estimator__C': 0.1, 'estimator__max_iter': 1000, 'estimator__penalty': 'none', 'estimator__solver': 'lbfgs'}\n"
      ]
     },
     {
@@ -598,14 +592,11 @@
       "    alpha = (1.0 / C) * (1 - l1_ratio)\n",
       "TypeError: unsupported operand type(s) for -: 'int' and 'NoneType'\n",
       "\n",
-      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Maximum accuracy of 0.573276 was yielded using: {'estimator__C': 0.1, 'estimator__max_iter': 1000, 'estimator__penalty': 'l1', 'estimator__solver': 'saga'}\n"
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "c:\\Users\\Babak\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1173: FutureWarning: `penalty='none'`has been deprecated in 1.2 and will be removed in 1.4. To keep the past behaviour, set `penalty=None`.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Babak\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -665,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +664,7 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n",
-      "Maximum accuracy of 0.582615 was yielded using: {'estimator__bootstrap': False, 'estimator__criterion': 'gini', 'estimator__max_features': 'sqrt'}\n"
+      "Maximum accuracy of 0.482759 was yielded using: {'estimator__bootstrap': True, 'estimator__criterion': 'gini', 'estimator__max_features': 'log2'}\n"
      ]
     }
    ],
@@ -778,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +777,7 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 80 candidates, totalling 240 fits\n",
-      "Maximum accuracy of 0.583333 was yielded using: {'estimator__learning_rate': 0.1, 'estimator__max_depth': 7, 'estimator__n_estimators': 100}\n"
+      "Maximum accuracy of 0.498563 was yielded using: {'estimator__learning_rate': 0.1, 'estimator__max_depth': 1, 'estimator__n_estimators': 100}\n"
      ]
     }
    ],
