--- a/02_02_ml_panel.ipynb
+++ b/02_02_ml_panel.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "df = pd.read_csv(\"./dataset/05_cleaned.csv\")\n",
     "\n",
-    "# Removing the columns regarding the first differance\n",
+    "# Removing the unnecessary columns other than first differance and a selected set of ordinaries\n",
     "cols_to_remove = [col for col in df.columns if (\n",
     "    ((col[:5] == 'team_') or (col[:9] == 'opponent_')) and\n",
     "    ('rating' not in col) and\n",
